margin top on footer to try fix overflow in deployment

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -456,6 +456,7 @@ footer {
   width: 100%;
   height: 100%;
   padding-bottom: 20px;
+  padding-top: 50px;
 }
 
 .footing {
